# OneTimePassword

./: .coverage  .dockerignore  .flake8  .gitignore  Dockerfile  Dockerfile.test  LICENSE  README.en.md  README.md  REQUIREMENTS_OVERVIEW.md  TEST_DESIGN.md  coverage.xml  docker-compose.yml  otp  pyproject.toml  requirements.txt  requirements_specification.md  run_tests.sh
.github/workflows/: ci-lint-code-quality.yml  ci-lint-code-quality.yml.disabled  ci-unit-tests.yml
docker/: Dockerfile.lint  docker-compose.yml
docs/: README.md  REQUIREMENTS_SPECIFICATION.md
src/: __init__.py  camera_qr_reader.py  crypto_utils.py  docker_manager.py  main.py  otp_generator.py  security_manager.py
tests/: TEST_DESIGN.md  conftest.py  run_tests.py
tests/integration/: test_integration.py
tests/unit/: test_camera_qr_reader.py  test_crypto_utils.py  test_docker_manager.py  test_main.py  test_otp_generator.py  test_security_manager.py
