[tool.poetry]
name = "onetimepassword"
version = "1.0.0"
description = "Google Authenticatorと同様の機能を持つワンタイムパスワード生成アプリケーション"
authors = ["OneTimePassword Team <team@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pyotp = "^2.9.0"
opencv-python = "^4.8.1"
cryptography = "^41.0.7"
Pillow = "^10.0.1"
docker = "^6.1.3"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
otp = "src.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
